--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -1,6 +1,6 @@
 <h1>Log In Below:</h1>
 
-<form action="/sessions" method="post">
+<form action="/login" method="post">
   <p>Username: <input type="text" name="username"></p>
   <p>Password: <input type="text" name="password"></p>
   <input type="submit" name="submit" value="Log In">
