--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -3,5 +3,5 @@
 <form action="/login" method="post">
   <p>Username: <input type="text" name="username"></p>
   <p>Password: <input type="text" name="password"></p>
-  <input type="submit" name="submit" value="Log In">
+  <input type="submit" name="submit" value="submit">
 </form>
