--- a/app/views/posts/index.erb
+++ b/app/views/posts/index.erb
@@ -1,5 +1,7 @@
 <h1>Your Tweets</h1>
 
 <% User.tweets.each do |t| %>
-<p><a href="/tweets/<%=t.id%>"><%=t.content%></a></p> 
+<p><a href="/tweets/<%=t.id%>"><%=t.content%></a></p>
 <%end%>
+
+<a href="logout">Log Out</a>
