--- a/app/views/posts/new.erb
+++ b/app/views/posts/new.erb
@@ -4,3 +4,5 @@
   <label></lable><input type="text" name="content" value="content">
   <input type="submit" name="submit" value="submit">
 </form>
+
+<a href="/logout">Log Out</a>
