--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -1,7 +1,10 @@
 <h3>Sign Up to Fwitter</h3>
-<form action="/signup" method="POST">
-	<label>Username:</label><input type="text" name="user[username]">
-	<label>Password:</label><input type="password" name="user[password]">
-  <label>Email:</label><input type="text" name="user[email]">
+<form action="/signup" method="post">
+	<label>Username:</label>
+	<input type="text" name="username">
+	<label>Password:</label>
+	<input type="password" name="password">
+  <label>Email:</label>
+	<input type="text" name="email">
 	<input type="submit" value="Sign Up">
 </form>
