--- a/app/views/posts/index.erb
+++ b/app/views/posts/index.erb
@@ -1,6 +1,6 @@
-<h1>Your Tweets</h1>
+<h1>Welcome, <%=@user.username%></h1>
 
-<% User.tweets.each do |t| %>
+<% @user.tweets.each do |t| %>
 <p><a href="/tweets/<%=t.id%>"><%=t.content%></a></p>
 <%end%>
 
