--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -2,6 +2,6 @@
 
 <form action="/login" method="post">
   <p>Username: <input type="text" name="username"></p>
-  <p>Password: <input type="text" name="password"></p>
+  <p>Password: <input type="password" name="password"></p>
   <input type="submit" name="submit" value="submit">
 </form>
