--- a/app/views/posts/edit.erb
+++ b/app/views/posts/edit.erb
@@ -1,2 +1,14 @@
+<h1>Edit Tweet <%=@tweet.id%></h1>
 
+<p><%=@tweet.content%></p>
+<form action="/tweets/<%=@tweet.id%>" method="post">
+  <input id="hidden" type="hidden" name="_method" value="patch">
+  <label></lable><input type="text" name="content" value="content">
+  <input type="submit" name="submit" value="submit">
+</form>
+
+<form action="/tweets/<%= @tweet.id %>/delete" method="post">
+  <input id="hidden" type="hidden" name="_method" value="delete">
+  <input type="submit" value="Delete Tweet">
+</form>
 <a href="/logout">Log Out</a>
