--- a/app/views/posts/show.erb
+++ b/app/views/posts/show.erb
@@ -2,7 +2,13 @@
 
 <p><%=@tweet.content%></p>
 
-<form action="/tweets/<%= @post.id %>/delete" method="post">
+<form action="/tweet/<%=@tweet.id%>" method="post">
+  <input id="hidden" type="hidden" name="_method" value="patch">
+  <label></lable><input type="text" name="content" value="content">
+  <input type="submit" name="submit" value="Edit Tweet">
+</form>
+
+<form action="/tweets/<%= @tweet.id %>/delete" method="post">
   <input id="hidden" type="hidden" name="_method" value="delete">
   <input type="submit" value="Delete Tweet">
 </form>
